--- a/Portfolio.css
+++ b/Portfolio.css
@@ -82,3 +82,25 @@ li:hover {
 text:hover {
     cursor: pointer;
 }
+.menu {
+    margin: auto;
+    display:block;
+    cursor: pointer;
+    margin-left: 20px;
+}
+#menu {
+    width: 35px;
+    height: 5px;
+    background-color: black;
+  }
+  .about {
+    margin-bottom: 10px;
+    margin-left: 0px;
+    margin-right: -39px;
+  }
+  .contact {
+    margin-top: 10px;
+    margin-bottom: -10px;
+    margin-right: 39px;
+    margin-left: -39px;
+  }
