--- a/Portfolio.css
+++ b/Portfolio.css
@@ -12,7 +12,7 @@ div {
     margin-top: -10px;
 }
 section {
-    scale: 0;
+    scale: 1;
 }
 .d {
    font-size: 100px;
@@ -36,36 +36,37 @@ section {
     position: fixed;
     height: 100px;
     width: 1210px;
-    margin-right: 85px;
-    margin-left: 20px;
-    margin-top: -8px;
+    margin: 0px;
+    top: 0px;
+    left: 180px;
     background-color: rgb(0, 0, 0);
     border-radius: 0px 0px 20px 20px;
+    z-index: 1;
 }
 #navside {
     float: right;
+    height: 800px;
     background-color: black;
     width: 78px;
-    margin-right: -8px;
-    margin-left: 8px;
-    margin-top: -8px;;
+    left: 1440px;
+    top: -0px;
+    position: fixed;
 }
 .github , .twitter , .linkedin , .email {
     margin: 45px 0px 0px 0px;
-    color: rgb(242, 250, 242);
 }
 i {
     height: 150px;
     margin-left: 35px;
+    color: white;
 }
 .section1 , .section2 , .section3 {
-    height: 190px;
+    height: 600px;
     width: 1345px;
 }
 h1 {
     display: block;
-    margin: 19.920px 80px 19.920px 30px;
-    background-color: ;
+    padding-left: 680px;
 }
 .nav-text {
     color:rgb(85, 85, 85);
@@ -114,3 +115,166 @@ text:hover {
     margin-right: 39px;
     margin-left: -39px;
   }
+  .p-about {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 20px;
+    font-weight: 700;
+    text-decoration: solid;
+    word-spacing: 5px;
+    position: relative;
+    width: 500px;
+    padding-left: 200px;
+    top: 70px;
+  }
+  p {
+    display: inline-block;
+  }
+  img {
+    border-radius: 20px;
+  }
+  .img-about {
+    display: inline-block;
+    position: relative;
+    height: 300px;
+    width: 300px;
+    top: 100px;
+    left: 200px;
+  }
+
+
+  ///////////////////////
+
+  .container {
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+  }
+  
+  .line {
+    width: 2px;
+    height: 200px;
+    background-color: #000;
+    position: absolute;
+    animation: move 10s linear infinite;
+  }
+  
+  @keyframes move {
+    0% {
+      transform: translateY(0);
+    }
+    20% {
+      transform: translateY(-50px) rotate(45deg);
+    }
+    40% {
+      transform: translateY(100px) rotate(90deg);
+    }
+    60% {
+      transform: translateY(-100px) rotate(135deg);
+    }
+    80% {
+      transform: translateY(50px) rotate(180deg);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+  
+  .line-1 {
+    top: 0;
+    left: 0;
+    transform: rotate(45deg);
+  }
+  
+  .line-2 {
+    top: 0;
+    right: 0;
+    transform: rotate(-45deg);
+  }
+  
+  .line-3 {
+    bottom: 0;
+    right: 0;
+    transform: rotate(135deg);
+  }
+  
+  .line-4 {
+    bottom: 0;
+    left: 0;
+    transform: rotate(-135deg);
+  }
+  
+  .line-5 {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  
+  
+  ///////////////////
+
+  .container {
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+  }
+  
+  .circle {
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+    background-color: #000;
+    position: absolute;
+    animation: move 10s linear infinite;
+  }
+  
+  @keyframes move {
+    0% {
+      transform: translateX(0) rotate(0);
+    }
+    25% {
+      transform: translateX(200px) rotate(45deg);
+    }
+    50% {
+      transform: translateX(-200px) rotate(90deg);
+    }
+    75% {
+      transform: translateX(200px) rotate(135deg);
+    }
+    100% {
+      transform: translateX(0) rotate(180deg);
+    }
+  }
+  
+  .circle-1 {
+    top: 0;
+    left: 0;
+  }
+  
+  .circle-2 {
+    top: 0;
+    right: 0;
+  }
+  
+  .circle-3 {
+    bottom: 0;
+    right: 0;
+  }
+  
+  .circle-4 {
+    bottom: 0;
+    left: 0;
+  }
+  
+  .circle-5 {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
