--- a/menustyles.css
+++ b/menustyles.css
@@ -15,17 +15,29 @@ div {
 }
 .text-div {
     position: relative;
-    width: 700px;
+    width: 500px;
     height: 400px;
-    top: 200px;
-    left: 50px;
-    background-color: black;
+    top: 0px;
 }
 .img-div {
     position: relative;
     width: 700px;
     height: 400px;
-    top: -186px;
-    left: 50px;
-    background-color: black;
+    top: 70px;
+    left: 200px;
+}
+img {
+    width: 400px;
+    height: 400px;
+    padding-left: 120px;
+    padding-top: 90px;
+}
+p {
+    height: 400px;
+    width: 400px;
+    padding-left: 200px;
+    padding-bottom: 90px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 20px;
+    font-weight: 500;
 }
