--- a/Portfolio.css
+++ b/Portfolio.css
@@ -139,142 +139,24 @@ text:hover {
     width: 300px;
     top: 100px;
     left: 200px;
+    box-shadow: 5px 5px rgb(40, 35, 55);
   }
-
-
-  ///////////////////////
-
-  .container {
-    width: 100%;
-    height: 50vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.apple-text {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 20px;
+    font-weight: 700;
+    text-decoration: solid;
+    word-spacing: 5px;
     position: relative;
-  }
-  
-  .line {
-    width: 2px;
-    height: 200px;
-    background-color: #000;
-    position: absolute;
-    animation: move 10s linear infinite;
-  }
-  
-  @keyframes move {
-    0% {
-      transform: translateY(0);
-    }
-    20% {
-      transform: translateY(-50px) rotate(45deg);
-    }
-    40% {
-      transform: translateY(100px) rotate(90deg);
-    }
-    60% {
-      transform: translateY(-100px) rotate(135deg);
-    }
-    80% {
-      transform: translateY(50px) rotate(180deg);
-    }
-    100% {
-      transform: translateY(0);
-    }
-  }
-  
-  .line-1 {
-    top: 0;
-    left: 0;
-    transform: rotate(45deg);
-  }
-  
-  .line-2 {
-    top: 0;
-    right: 0;
-    transform: rotate(-45deg);
-  }
-  
-  .line-3 {
-    bottom: 0;
-    right: 0;
-    transform: rotate(135deg);
-  }
-  
-  .line-4 {
-    bottom: 0;
-    left: 0;
-    transform: rotate(-135deg);
-  }
-  
-  .line-5 {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  
-  
-  
-  ///////////////////
-
-  .container {
-    width: 100%;
-    height: 50vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    width: 500px;
+    padding-left: 200px;
+    top: 20px;
+}
+.apple-vid {
+  display: inline-block;
     position: relative;
-  }
-  
-  .circle {
-    width: 200px;
-    height: 200px;
-    border-radius: 100px;
-    background-color: #000;
-    position: absolute;
-    animation: move 10s linear infinite;
-  }
-  
-  @keyframes move {
-    0% {
-      transform: translateX(0) rotate(0);
-    }
-    25% {
-      transform: translateX(200px) rotate(45deg);
-    }
-    50% {
-      transform: translateX(-200px) rotate(90deg);
-    }
-    75% {
-      transform: translateX(200px) rotate(135deg);
-    }
-    100% {
-      transform: translateX(0) rotate(180deg);
-    }
-  }
-  
-  .circle-1 {
-    top: 0;
-    left: 0;
-  }
-  
-  .circle-2 {
-    top: 0;
-    right: 0;
-  }
-  
-  .circle-3 {
-    bottom: 0;
-    right: 0;
-  }
-  
-  .circle-4 {
-    bottom: 0;
-    left: 0;
-  }
-  
-  .circle-5 {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  
+    top: 100px;
+}
+.projects-anchor {
+  color:rgb(16, 1, 63)
+}
