--- a/Portfolio.css
+++ b/Portfolio.css
@@ -2,7 +2,7 @@
     scroll-behavior: smooth;
 }
 body {
-    background-image: linear-gradient(rgb(151, 181, 230) , rgb(106, 143, 197) , rgb(26, 42, 82));
+    background-image: linear-gradient(180deg, rgb(255, 255, 255) , rgb(255, 255, 255), rgb(106, 143, 197) , rgb(26, 42, 82));
 }
 div {
     display: inline-block;
@@ -130,7 +130,7 @@ text:hover {
     display: inline-block;
   }
   img {
-    border-radius: 20px;
+    border-radius: 10px;
   }
   .img-about {
     display: inline-block;
@@ -139,7 +139,6 @@ text:hover {
     width: 300px;
     top: 100px;
     left: 200px;
-    box-shadow: 5px 5px rgb(40, 35, 55);
   }
 .apple-text {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
