--- a/Portfolio.css
+++ b/Portfolio.css
@@ -10,6 +10,8 @@ div {
 .div-letters {
     margin-bottom: 10px;
     margin-top: -10px;
+    background-image: linear-gradient(10deg, rgb(129, 180, 243) , rgb(68, 101, 191), rgb(4, 76, 183) , rgb(26, 42, 82));
+    border-radius: 70px;
 }
 section {
     scale: 1;
