--- a/Portfolio.css
+++ b/Portfolio.css
@@ -13,6 +13,9 @@ div {
     background-image: linear-gradient(10deg, rgb(129, 180, 243) , rgb(68, 101, 191), rgb(4, 76, 183) , rgb(26, 42, 82));
     border-radius: 70px;
 }
+.div-span {
+  scale: 0;
+}
 section {
     scale: 1;
 }
@@ -65,6 +68,7 @@ i {
 .section1 , .section2 , .section3 {
     height: 600px;
     width: 1345px;
+
 }
 h1 {
     display: block;
@@ -95,17 +99,6 @@ li:hover {
 text:hover {
     cursor: pointer;
 }
-.menu {
-    margin: auto;
-    display:block;
-    cursor: pointer;
-    margin-left: 20px;
-}
-#menu {
-    width: 35px;
-    height: 5px;
-    background-color: black;
-  }
   .about {
     margin-bottom: 10px;
     margin-left: 0px;
@@ -125,7 +118,7 @@ text:hover {
     word-spacing: 5px;
     position: relative;
     width: 500px;
-    padding-left: 200px;
+    left: 200px;
     top: 70px;
   }
   p {
@@ -139,8 +132,8 @@ text:hover {
     position: relative;
     height: 300px;
     width: 300px;
-    top: 100px;
-    left: 200px;
+    top: 80px;
+    left: 300px;
   }
 .apple-text {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -150,13 +143,14 @@ text:hover {
     word-spacing: 5px;
     position: relative;
     width: 500px;
-    padding-left: 200px;
+    left: 200px;
     top: 20px;
 }
 .apple-vid {
   display: inline-block;
     position: relative;
     top: 100px;
+    left: 250px;
 }
 .projects-anchor {
   color:rgb(44, 4, 147);
@@ -207,6 +201,10 @@ form {
     border-radius: 5px;
   }  
 .menu {
+    margin: auto;
+    display:block;
+    cursor: pointer;
+    margin-left: 20px;
     width: 100px;
     height: 70px;
     background-color:rgb(222, 222, 222);
@@ -220,6 +218,9 @@ form {
   }
 
   #menu {
+    width: 35px;
+    height: 5px;
+    background-color: black;
     position: relative;
     top: 23px;
     left: 33px;
@@ -236,4 +237,3 @@ form {
       transform: translateY(-50%) translateY(-30px);
     }
   }
-  
