--- a/Portfolio.css
+++ b/Portfolio.css
@@ -2,7 +2,7 @@
     scroll-behavior: smooth;
 }
 body {
-    background-image: linear-gradient(180deg, rgb(255, 255, 255) , rgb(255, 255, 255), rgb(106, 143, 197) , rgb(26, 42, 82));
+    background-image: linear-gradient(180deg, rgb(255, 255, 255) , rgb(255, 255, 255), rgb(104, 112, 173), rgb(52, 52, 223), rgb(106, 143, 197) , rgb(22, 0, 96));
 }
 div {
     display: inline-block;
@@ -11,7 +11,7 @@ div {
     margin-bottom: 10px;
     margin-top: -10px;
     background-image: linear-gradient(10deg, rgb(129, 180, 243) , rgb(68, 101, 191), rgb(4, 76, 183) , rgb(26, 42, 82));
-    border-radius: 70px;
+    border-radius: 90px;
 }
 .div-span {
   scale: 0;
@@ -71,8 +71,11 @@ i {
 
 }
 h1 {
-    display: block;
-    padding-left: 680px;
+    position: absolute;
+    margin: 0px;
+    width: 100px;
+    left: 700px;
+    top: 30px;
 }
 .nav-text {
     color:rgb(85, 85, 85);
@@ -111,15 +114,15 @@ text:hover {
     margin-left: -39px;
   }
   .p-about {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 20px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 21px;
     font-weight: 700;
     text-decoration: solid;
     word-spacing: 5px;
     position: relative;
     width: 500px;
     left: 200px;
-    top: 70px;
+    top: 130px;
   }
   p {
     display: inline-block;
@@ -132,28 +135,28 @@ text:hover {
     position: relative;
     height: 300px;
     width: 300px;
-    top: 80px;
-    left: 300px;
+    top: 140px;
+    left: 310px;
   }
 .apple-text {
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 20px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 21px;
     font-weight: 700;
     text-decoration: solid;
     word-spacing: 5px;
     position: relative;
     width: 500px;
     left: 200px;
-    top: 20px;
+    top: 130px;
 }
 .apple-vid {
   display: inline-block;
     position: relative;
-    top: 100px;
+    top: 170px;
     left: 250px;
 }
 .projects-anchor {
-  color:rgb(44, 4, 147);
+  color:rgb(125, 0, 0);
   text-decoration: none;
 }
 form {
@@ -164,8 +167,8 @@ form {
     border: 1px solid #ccc;
     background-color: #f3f3f3;
     position: relative;
-    left: 70px;
-    top: 50px;
+    left: 100px;
+    top: 150px;
   }
   
   .form-group {
