--- a/Portfolio.css
+++ b/Portfolio.css
@@ -76,6 +76,7 @@ h1 {
     width: 100px;
     left: 700px;
     top: 30px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .nav-text {
     color:rgb(85, 85, 85);
