--- a/Portfolio.css
+++ b/Portfolio.css
@@ -149,6 +149,7 @@ text:hover {
     width: 500px;
     left: 200px;
     top: 130px;
+    color: rgb(222, 222, 222);
 }
 .apple-vid {
   display: inline-block;
@@ -157,7 +158,7 @@ text:hover {
     left: 250px;
 }
 .projects-anchor {
-  color:rgb(125, 0, 0);
+  color:rgb(4, 2, 2);
   text-decoration: none;
 }
 form {
@@ -191,7 +192,6 @@ form {
     border: 1px solid #ccc;
     font-size: 16px;
   }
-  
   #message {
     width: 300%;
   }
@@ -229,8 +229,38 @@ form {
     top: 23px;
     left: 33px;
   }
+  .nav-left {
+    position: fixed;
+    width: 150px;
+
+  }
+  .ul-left {
+    position: relative;
+    padding: 0px;
+    left: 10px;
+    top: 200px;
+    list-style-type: none;
+  }
+  .about-li , .projects-li , .contact-li {
+    position: relative;
+    background-image: linear-gradient(to bottom right, red, yellow);
+    height: 50px;
+    text-align: center;
+    border-radius: 20px 0px 20px 0px;
+    margin-bottom: 10px;
+    border:solid rgb(0, 0, 0);
+    box-shadow: 0.5px 1px;
+  }
+.burger {
+  position: relative;
+  top: 15px;
+  font-size: 18px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color:rgb(0, 0, 0);
+  -webkit-text-stroke: px rgb(255, 255, 255);
+}
   
-  @keyframes float {
+  /*@keyframes float {
     0% {
       transform: translateY(-50%) translateY(-30px);
     }
@@ -240,4 +270,4 @@ form {
     100% {
       transform: translateY(-50%) translateY(-30px);
     }
-  }
+  }*/
