--- a/Portfolio.css
+++ b/Portfolio.css
@@ -8,10 +8,11 @@ div {
     display: inline-block;
 }
 .div-letters {
+  width: 165px;
     margin-bottom: 10px;
     margin-top: -10px;
-    background-image: linear-gradient(10deg, rgb(129, 180, 243) , rgb(68, 101, 191), rgb(4, 76, 183) , rgb(26, 42, 82));
-    border-radius: 90px;
+    background-image: linear-gradient(10deg, rgb(206, 206, 206) , rgb(93, 93, 93), rgb(0, 0, 0) , rgb(0, 0, 0));
+    border-radius: 40px 0px 40px 0px;
 }
 .div-span {
   scale: 0;
@@ -20,12 +21,18 @@ section {
     scale: 1;
 }
 .d {
+  position: relative;
+  left: 10px;
    font-size: 100px;
-   color:rgb(0, 0, 0);
+   color:rgb(255, 255, 255);
+   -webkit-text-stroke: 1px rgb(0, 0, 0);
 }
 .k {
+    position: relative;
+    left: 8px;
     font-size: 100px;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    -webkit-text-stroke: 1px rgb(0, 0, 0);
 }
 .d,.k:hover {
     cursor: pointer;
@@ -243,7 +250,7 @@ form {
   }
   .about-li , .projects-li , .contact-li {
     position: relative;
-    background-image: linear-gradient(to bottom right, red, yellow);
+    background-image: linear-gradient(10deg, rgb(206, 206, 206) , rgb(93, 93, 93), rgb(0, 0, 0) , rgb(0, 0, 0));
     height: 50px;
     text-align: center;
     border-radius: 20px 0px 20px 0px;
@@ -255,9 +262,8 @@ form {
   position: relative;
   top: 15px;
   font-size: 18px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  color:rgb(0, 0, 0);
-  -webkit-text-stroke: px rgb(255, 255, 255);
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: rgb(255, 255, 255);
 }
   
   /*@keyframes float {
