--- a/Portfolio.css
+++ b/Portfolio.css
@@ -2,7 +2,7 @@
     scroll-behavior: smooth;
 }
 body {
-    background-image: linear-gradient(180deg, rgb(255, 255, 255) , rgb(255, 255, 255), rgb(104, 112, 173), rgb(52, 52, 223), rgb(106, 143, 197) , rgb(22, 0, 96));
+    background-image: linear-gradient(180deg, rgb(255, 255, 255) , rgb(255, 255, 255), rgb(104, 112, 173), rgb(130, 140, 160), rgb(150, 160, 180) , rgb(22, 0, 96));
 }
 div {
     display: inline-block;
@@ -258,7 +258,7 @@ form {
     border:solid rgb(0, 0, 0);
     box-shadow: 0.5px 1px;
   }
-.burger {
+.left-menu {
   position: relative;
   top: 15px;
   font-size: 18px;
