--- a/Portfolio.css
+++ b/Portfolio.css
@@ -3,16 +3,18 @@
 }
 body {
     background-image: linear-gradient(180deg, rgb(255, 255, 255) , rgb(255, 255, 255), rgb(104, 112, 173), rgb(130, 140, 160), rgb(150, 160, 180) , rgb(22, 0, 96));
+    margin: 0px;
 }
 div {
     display: inline-block;
 }
 .div-letters {
+  position: relative;
   width: 165px;
-    margin-bottom: 10px;
-    margin-top: -10px;
+    top: 5px;
+    left: 5px;
     background-image: linear-gradient(10deg, rgb(206, 206, 206) , rgb(93, 93, 93), rgb(0, 0, 0) , rgb(0, 0, 0));
-    border-radius: 40px 0px 40px 0px;
+    
 }
 .div-span {
   scale: 0;
@@ -42,14 +44,21 @@ section {
     margin: 0px 0px 0px 0px;
     padding: 0px 0px 0px 0px;
 }
+.non-transp {
+  display: inline-block;
+  position: fixed;
+  height: 35px;
+  width: 1210px;
+  left: 180px;
+  /*ADD OPACITY*/
+}
 #navtop {
     display: inline-block;
     justify-content: center;
     position: fixed;
     height: 100px;
     width: 1210px;
-    margin: 0px;
-    top: 0px;
+    top: 5px;
     left: 180px;
     background-color: rgb(0, 0, 0);
     border-radius: 0px 0px 20px 20px;
@@ -77,11 +86,35 @@ i {
     width: 1345px;
 
 }
+
+/*added css from the internet*/
+h1 {
+  --s: 0.1em;   /* the thickness of the line */
+  --c: #041899; /* the color */
+  
+  color: #0000;
+  padding-bottom: var(--s);
+  background: 
+    linear-gradient(90deg,var(--c) 50%,#000 0) calc(100% - var(--_p,0%))/200% 100%,
+    linear-gradient(var(--c) 0 0) 0% 100%/var(--_p,0%) var(--s) no-repeat;
+  -webkit-background-clip: text,padding-box;
+          background-clip: text,padding-box;
+  transition: 0.5s;
+}
+h1:hover {--_p: 100%}
+h1 {
+  font-family: system-ui, sans-serif;
+  font-size: 3rem;
+  cursor: pointer;
+}
+/*added css from the internet*/
+
+
 h1 {
     position: absolute;
     margin: 0px;
-    width: 100px;
-    left: 700px;
+    width: 240px;
+    left: 650px;
     top: 30px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
@@ -121,7 +154,7 @@ text:hover {
     margin-right: 39px;
     margin-left: -39px;
   }
-  .p-about {
+  /*.p-about {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 21px;
     font-weight: 700;
@@ -131,7 +164,8 @@ text:hover {
     width: 500px;
     left: 200px;
     top: 130px;
-  }
+    text-shadow: 2px black;
+  }*/
   p {
     display: inline-block;
   }
@@ -146,7 +180,7 @@ text:hover {
     top: 140px;
     left: 310px;
   }
-.apple-text {
+/*.apple-text {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 21px;
     font-weight: 700;
@@ -157,7 +191,35 @@ text:hover {
     left: 200px;
     top: 130px;
     color: rgb(222, 222, 222);
+}*/
+
+/*css from the internet*/
+
+.p-about , .apple-text {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, cursive;
+  font-size: 1.1em;
+  position: relative;
+  width: 500px;
+  left: 480px;
+  top: 130px;
+  letter-spacing: 0.5px;
+  transform: translate(-50%,-50%);
+  background-image: linear-gradient(150deg , rgb(255, 255, 255), rgb(150, 160, 180));
+  background-size: 100% 10px;
+  background-repeat: no-repeat;
+  background-position: 100% 0%;
+   transition: background-size .7s, background-position .5s ease-in-out;
+   border-radius: 8px 0px 8px 0px;
 }
+
+.p-about:hover , .apple-text:hover {
+  background-size: 100% 100%;
+  background-position: 0% 100%;
+  transition: background-position .7s, background-size .5s ease-in-out;
+}
+
+/*css from the internet*/
+
 .apple-vid {
   display: inline-block;
     position: relative;
@@ -265,6 +327,10 @@ form {
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   color: rgb(255, 255, 255);
 }
+
+form , .apple-vid , #navtop , .div-letters {
+  border-radius: 40px 0px 40px 0px;
+}
   
   /*@keyframes float {
     0% {
@@ -277,3 +343,6 @@ form {
       transform: translateY(-50%) translateY(-30px);
     }
   }*/
+
+  @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
