--- a/Portfolio.css
+++ b/Portfolio.css
@@ -109,7 +109,6 @@ h1 {
 }
 /*added css from the internet*/
 
-
 h1 {
     position: absolute;
     margin: 0px;
@@ -205,11 +204,12 @@ text:hover {
   letter-spacing: 0.5px;
   transform: translate(-50%,-50%);
   background-image: linear-gradient(150deg , rgb(255, 255, 255), rgb(150, 160, 180));
-  background-size: 100% 10px;
+  background-size: 100% 20px;
   background-repeat: no-repeat;
   background-position: 100% 0%;
    transition: background-size .7s, background-position .5s ease-in-out;
    border-radius: 8px 0px 8px 0px;
+   cursor: pointer;
 }
 
 .p-about:hover , .apple-text:hover {
@@ -301,14 +301,12 @@ form {
   .nav-left {
     position: fixed;
     width: 150px;
-
   }
   .ul-left {
     position: relative;
     padding: 0px;
     left: 10px;
     top: 200px;
-    list-style-type: none;
   }
   .about-li , .projects-li , .contact-li {
     position: relative;
