--- a/Portfolio.css
+++ b/Portfolio.css
@@ -82,9 +82,10 @@ i {
     color: white;
 }
 .section1 , .section2 , .section3 {
+    position: relative;
     height: 600px;
-    width: 1345px;
-
+    width: 1200px;
+    left: 180px;
 }
 
 /*added css from the internet*/
@@ -113,8 +114,8 @@ h1 {
     position: absolute;
     margin: 0px;
     width: 240px;
-    left: 650px;
-    top: 30px;
+    left: 480px;
+    top: 100px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .nav-text {
@@ -176,8 +177,8 @@ text:hover {
     position: relative;
     height: 300px;
     width: 300px;
-    top: 140px;
-    left: 310px;
+    top: 250px;
+    left: 160px;
   }
 /*.apple-text {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -199,8 +200,8 @@ text:hover {
   font-size: 1.1em;
   position: relative;
   width: 500px;
-  left: 480px;
-  top: 130px;
+  left: 280px;
+  top: 250px;
   letter-spacing: 0.5px;
   transform: translate(-50%,-50%);
   background-image: linear-gradient(150deg , rgb(255, 255, 255), rgb(150, 160, 180));
@@ -223,8 +224,8 @@ text:hover {
 .apple-vid {
   display: inline-block;
     position: relative;
-    top: 170px;
-    left: 250px;
+    top: 250px;
+    left: 50px;
 }
 .projects-anchor {
   color:rgb(4, 2, 2);
@@ -238,8 +239,8 @@ form {
     border: 1px solid #ccc;
     background-color: #f3f3f3;
     position: relative;
-    left: 100px;
-    top: 150px;
+    left: 0px;
+    top: 200px;
   }
   
   .form-group {
@@ -304,6 +305,7 @@ form {
   }
   .ul-left {
     position: relative;
+    width: 150px;
     padding: 0px;
     left: 10px;
     top: 200px;
@@ -317,6 +319,7 @@ form {
     margin-bottom: 10px;
     border:solid rgb(0, 0, 0);
     box-shadow: 0.5px 1px;
+    cursor: pointer;
   }
 .left-menu {
   position: relative;
@@ -325,7 +328,6 @@ form {
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   color: rgb(255, 255, 255);
 }
-
 form , .apple-vid , #navtop , .div-letters {
   border-radius: 40px 0px 40px 0px;
 }
