--- a/Portfolio.css
+++ b/Portfolio.css
@@ -16,6 +16,9 @@ div {
     background-image: linear-gradient(10deg, rgb(206, 206, 206) , rgb(93, 93, 93), rgb(0, 0, 0) , rgb(0, 0, 0));
     
 }
+.div-letters:hover {
+  /*background-color: #041899;*/
+}
 .div-span {
   scale: 0;
 }
