--- a/Portfolio.css
+++ b/Portfolio.css
@@ -1,5 +1,6 @@
 * {
     scroll-behavior: smooth;
+    scroll-padding-top: 10rem;
 }
 body {
     background-image: linear-gradient(180deg, rgb(255, 255, 255) , rgb(255, 255, 255), rgb(104, 112, 173), rgb(130, 140, 160), rgb(150, 160, 180) , rgb(22, 0, 96));
@@ -15,9 +16,6 @@ div {
     left: 5px;
     background-image: linear-gradient(10deg, rgb(206, 206, 206) , rgb(93, 93, 93), rgb(0, 0, 0) , rgb(0, 0, 0));
     
-}
-.div-letters:hover {
-  /*background-color: #041899;*/
 }
 .div-span {
   scale: 0;
@@ -90,7 +88,6 @@ i {
     width: 1200px;
     left: 180px;
 }
-
 /*added css from the internet*/
 h1 {
   --s: 0.1em;   /* the thickness of the line */
