--- a/Portfolio.css
+++ b/Portfolio.css
@@ -1,14 +1,12 @@
 * {
     scroll-behavior: smooth;
-    scroll-padding-top: 10rem;
+    scroll-padding-top: 9rem;
 }
 body {
-    /*background-image: linear-gradient(180deg, rgb(255, 255, 255) , rgb(255, 255, 255), rgb(104, 112, 173), rgb(130, 140, 160), rgb(150, 160, 180) , rgb(22, 0, 96));
-    margin: 0px;*/
-    background: linear-gradient(-45deg,rgb(255, 255, 255) , rgb(255, 255, 255), rgb(150, 160, 180) , rgb(22, 0, 96));
-	  background-size: 410% 410%;
-	  animation: gradient 15s ease infinite;
-	  height: 100vh;
+    /*background-image: linear-gradient(180deg, rgb(255, 255, 255) , rgb(255, 255, 255), rgb(104, 112, 173), rgb(130, 140, 160), rgb(150, 160, 180) , rgb(22, 0, 96));*/
+    margin: 0px;
+    background-image: linear-gradient(180deg, rgb(255, 255, 255) , rgb(255, 255, 255), rgb(104, 112, 173), rgb(90, 110, 130), rgb(80, 100, 110) , rgb(22, 0, 96));
+
 }
 div {
     display: inline-block;
@@ -65,9 +63,13 @@ section {
     width: 1210px;
     top: 0px;
     left: 180px;
-    background-color: rgb(0, 0, 0);
+    /*background-color: rgb(0, 0, 0);*/
     border-radius: 0px 0px 20px 20px;
     z-index: 1;
+    background: linear-gradient(-45deg,rgb(149, 148, 148) , rgb(122, 122, 122), rgb(74, 74, 74) , rgb(0, 0, 0));
+	  background-size: 410% 410%;
+	  animation: gradient 25s ease infinite;
+	  
 }
 #navside {
     float: right;
@@ -319,7 +321,7 @@ form {
     padding: 0px;
     left: 10px;
     top: 200px;
-    list-style-type: none; /*Add this because it appeared when added background-animation*/
+    list-style-type: none; /*Added this because it appeared when added background-animation*/
   }
   .about-li , .projects-li , .contact-li {
     position: relative;
